<resources>
    <string name="app_name">Cooks Guide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Справочник кулинара</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>
    <string name="text_size">Размер текста</string>
    <string name="add_error">Не все поля заполнены!</string>
    <string name="save">Данные успешно сохранены!</string>
    <string name="eat">Блюда и изделия</string>
    <string name="prod">Кулинарные ингридиенты</string>
    <string name="tools">Кулинарный инвентарь</string>
    <string name="receipt">Ваши рецепты</string>
    <string name="help">Поддержка</string>
    <string name="info">Разработчики</string>
    <string name="adjika">
       Приготовление рецепта: Аджика - шаг №1\n
Подготовить ингредиенты для аджики с яблоками и помидорами.
Банки вымыть, простерилизовать любым способом.
\n\n
Аджика - шаг №2\n
Как приготовить аджику с яблоками и помидорами на зиму:
\n\n
Помидоры вымыть, разрезать на части.
\n\n
Аджика - шаг №3\n
Яблоки вымыть, разрезать на части, очистить от семян.
\n\n
Аджика - шаг №4\n
Чеснок очистить.
\n\n
Аджика - шаг №5\n
Острый перец вымыть, отрезать хвостики.
\n\n
Аджика - шаг №6\n
Пропустить через мясорубку помидоры и яблоки.
\n\n
Аджика - шаг №7\n
Отдельно пропустить через мясорубку чеснок и острый перец.
\n\n
Аджика - шаг №8\n
Томатно-яблочное пюре варить на медленном огне 2-2,5 часа.
\n\n
Аджика - шаг №9\n
За 30 минут до окончания варки добавить измельченный чеснок и перец, растительное масло, соль, сахар. Всё перемешать.
\n\n
Аджика - шаг №10\n
Разложить аджику по стерилизованным банкам и закрыть стерилизованными крышками.
\n\n
Аджика - шаг №11\n
Домашняя аджика с яблоками и помидорами на зиму готова.
Приятного аппетита!
    </string>
    <string name="airan">
       Приготовление рецепта: Айран - шаг №1 \n Молоко вскипятить, охладить до 30-40° C.
\n\n
Айран - шаг №2\n
В охлажденное кипяченое молоко добавить кислое молоко.
\n\n
Айран - шаг №3\n
Затем взбить и оставить при комнатной температуре для сквашивания, затем на сутки поставить в холодное место. Сквашивание ведут при 30-35° C.
\n\n
Айран - шаг №4\n
После образования сгустка продукт выдержать для созревания в течение 10-12 часов при температуре 14-16° C.
\n\n
Айран - шаг №5\n
Айран готов. Подавать айран следует холодным.
Приятного аппетита!
    </string>
    <string name="baget">
                Как приготовить Французский багет:
   \n
        1. Влить в форму для выпечки теплую воду, всыпать муку, затем соль, дрожжи.
\n\n
2. Выбрать режим "Французский хлеб". Нажать кнопку "Старт".
\n\n
3. Как только тесто будет готово, достать его из хлебопечки на посыпанную мукой досточку.
\n\n
4. Раскатать шар в прямоугольник, согнуть его пополам, прижать. Оставить отдохнуть на 10 минут. и повторить так 3 раза.
\n\n
5. Свернуть тесто рулетом и растянуть, придав форму батона.
\n\n
6. Переложить тесто в форму для выпечки батона, закрыть смазанной маслом пленкой и оставить подниматься на 30 минут.
\n\n
7. Надрезать батон сверху 4 - 5 раз и отправить в разогретую до 220 градусов духовку выпекать на 20 минут.
\n\n
8. Остудить хлеб на решетке.
    </string>
    <string name="BQ">
        Как приготовить куриные крылышки Барбекю:
\n
1. Куриные крылья промыть и просушить бумажной салфеткой.
\n\n
2. Сливочное масло растопить на водяной бане.
\n\n
3. Крылышки посолить, поперчить, смешать с соусом Барбекю и сливочным маслом.
\n\n
4. Разогреть духовку до 180 градусов.
\n\n
5. Противень слегка смазать растительным маслом, выложить на него крылышки и запечь в духовке, в течение примерно 30 минут.
\n\n
Куриные крылышки Барбекю готовы. Приятного аппетита!
    </string>
    <string name="vinigret">
        Как приготовить винегрет:
\n
Отвариваем все овощи.
Нарезаем кубиками морковь.
\n\n

Фото приготовления рецепта: Винегрет - шаг №4\n
Нарезаем соленые огурцы.
\n\n
Винегрет - шаг №5\n
Высыпаем горошек.
\n\n
Винегрет - шаг №6\n
Выдавливаем чеснок и перемешиваем.
\n\n
Винегрет - шаг №7\n
Нарезаем зелень и добавляем к винегрету.
Винегрет можно заправлять оливковым, растительным маслом, а также сметаной.
Приятного аппетита!
    </string>
    <string name="kasha">

Как варить манную кашу на молоке:
\n
1. Вскипятить молоко.
\n\n
2. Когда молоко закипело, убавить огонь, в молоко добавить соль и сахар, перемешать.
\n\n
3. Всыпать манную крупу в кипящее молоко тонкой струйкой, постоянно помешивая.
\n\n
4. Варить манную кашу 4-5 минут. Постоянно мешать, чтобы не образовывались комки.
\n\n
5. Каша манная молочная готова. Разлить манную кашу по тарелкам, добавить сливочное масло по вкусу.
\n\n
Можно к манной каше подать варенье или мед. Приятного аппетита!
    </string>
    <string name="okroshka">
        Как приготовить окрошку:
      \n
        1. Картофель (очищенный) и яйца нужно отварить (яйца сразу в холодную воду).
\n\n
2. Огурцы, редиску, лук и зелень мелко порезать, колбасу тоже пустить на кубики.
\n\n
3. Остывший картофель и яйца порезать тем же способом.
\n\n
4. Все это высыпать в кастрюлю и хорошо перемешать. Желательно, конечно, набить кастрюлю до самого верха. Я не заливаю окрошку сразу - так хранится дольше, и вообще, так удобнее.
\n\n
5.  Насыпать в глубокую миску нашу заготовку и залить ее квасом/кефиром/айраном - на выбор. Добавляю в миску чайную ложку горчицы без горки.
\n\n
Вуа-ля! Можно приниматься за процесс поглощения этого наивкуснейшего летнего супа.
Приятного аппетита!
    </string>
    <string name="doma">
        Как приготовить долму:
\n
Рис отварить в течение 5 минут, затем промыть в холодной воде (рис должен быть недоварен).
\n\n
Долма - шаг №2\n
Нарезать мелко курдючный жир, зелень и репчатый лук.
        \n\n
        Долма - шаг №3\n
Обжарить лук на сливочном масле 5 минут на слабом огне. Остудить.
\n\n
Долма - шаг №4\n
В мясной фарш добавить рис, обжаренный лук, курдючный жир, зелень, 1 ч. л. соли, черный перец, хмели-сунели, красный перец, мяту. Постепенно добавить 300 мл воды, тщательно вымешивая фарш руками в течение 8 минут.
\n\n
Долма - шаг №5\n
Виноградный лист положить глянцевой стороной на доску, а шершавой (матовой) стороной наверх. У основания листа выложить 1 ч.л. приготовленного фарша и свернуть виноградный лист с начинкой в плотную трубочку, подворачивая края листа внутрь.
\n\n
Долма - шаг №6\n
На дно кастрюли положить перевернутую тарелку и выкладывать долму в кастрюлю швом вниз по кругу.
\n\n
Долма - шаг №7\n
Выкладывать долму в несколько слоев.
\n\n
Долма - шаг №8\n
Сверху выложить несколько кусочков сливочного масла и оставшиеся виноградные листья.
\n\n
Долма - шаг №9\n
Прижать перевёрнутой тарелкой. На тарелку высыпать 1 ч. л. соли и налить 1 л воды. Вода должна быть на одном уровне с долмой или на 1 см ниже.
На среднем огне довести до кипения и тушить долму при закрытой крышке на слабом огне 1 час. Если виноградные листья будут жесткими, продолжайте тушить долму еще 30-40 минут, до готовности.
\n\n
Долма - шаг №10\n
Приготовить соус: мелко нарезать петрушку и кинзу, чеснок измельчить и добавить всё в мацони. Дать настояться 30 минут.
\n\n
Долма - шаг №11\n
По готовности долмы выключить огонь, убрать тарелку и виноградные листья, которые уложили сверху, и дать постоять 15 минут. Подавать долму с приготовленным соусом.
Приятного аппетита!
    </string>
    <string name="jambo">
        Приготовление рецепта: Джамбалайя - шаг №1\n
Подготавливаем необходимые ингредиенты.
\n\n
Джамбалайя - шаг №2\n
На помидорах делаем крестообразные надрезы. Заливаем помидоры кипятком и отставляем, пока будем заниматься другими овощами.
\n\n
Джамбалайя - шаг №3\n
Очищенный лук нарезаем мелкими кубиками.
Очищенный чеснок мелко рубим ножом.
\n\n
Джамбалайя - шаг №4\n
Сладкий болгарский перец освобождаем от плодоножек и семян и нарезаем небольшими кусочками.
\n\n
Джамбалайя - шаг №5\n
Помидоры очищаем от шкурки и нарезаем кубиками.
\n\n
Джамбалайя - шаг №6\n
Сосиски очищаем от упаковочной плёнки и нарезаем кружочками.
\n\n
Джамбалайя - шаг №7\n
На растительном масле обжариваем сосиски. Отставляем пока в сторону.
\n\n
Джамбалайя - шаг №8\n
В посуде, в которой будем готовить джамбалайю (подойдёт глубокая сковорода или сотейник), разогреваем растительное масло. Обжариваем лук до прозрачности.
\n\n
Джамбалайя - шаг №9\n
Добавляем к луку сладкий перец и слегка обжариваем.
\n\n
Джамбалайя - шаг №10\n
Добавляем помидоры, чеснок и томатную пасту. Солим и перчим.
\n\n
Джамбалайя - шаг №11\n
Туда же добавляем сосиски и рис. Перемешиваем и заливаем горячей водой. Вода должна быть выше содержимого сковороды или сотейника примерно на 1,5-2 см.
Убавляем огонь, накрываем крышкой и тушим до готовности риса.
\n\n
        Джамбалайя - шаг №12\n
Готовое блюдо посыпаем рубленой зеленью петрушки.
Приятного аппетита!
    </string>
    <string name="raf">
Приготовление рецепта: "Рафаэлло" (самый простой и быстрый способ) - шаг №1\n
Перемолоть кукурузные палочки через мясорубку.
\n\n
"Рафаэлло" (самый простой и быстрый способ) - шаг №2\n
Добавить 5-6 ст. л. сгущенки и пол чайной ложки размягченного масла.
\n\n
"Рафаэлло" (самый простой и быстрый способ) - шаг №3\n
Перемешать все компоненты в однородную массу. Отправить в холодильник на час, тогда тесто скрепится и легче будет формировать конфеты. Тем временем, пока застывает тесто, нужно поджарить арахис, остудить и снять шелуху.
\n\n
"Рафаэлло" (самый простой и быстрый способ) - шаг №4\n
Через час достать тесто из холодильника. С помощью чайной ложки отщипнуть тесто, сформировать лепешку, на середину которой поставить арахис.
\n\n
"Рафаэлло" (самый простой и быстрый способ) - шаг №5\n
Защипнуть края. Сформировать шарик.
\n\n
"Рафаэлло" (самый простой и быстрый способ) - шаг №6\n
Обвалять в кокосовой стружке.
\n\n
"Рафаэлло" (самый простой и быстрый способ) - шаг №7\n
Если есть форма для конфет, выкладываем туда свои произведения искусства. Отправляем в холодильник. Достаем за 5 минут до подачи на стол. Приятного аппетита!
    </string>
    <string name="tiramisu">
        Шаг 1\n
Подготовьте все ингредиенты для приготовления "Тирамису".
\n\n
Шаг 2\n
В стакане горячей воды растворите кофе.
\n\n
Шаг 3\n
Добавьте коньяк.
\n\n
Шаг 4\n
Быстро макайте печенье в кофе с коньяком и выкладывайте в форму. Выложите таким образом 12 штук печенья.
\n\n
Шаг 5\n
Приготовьте крем. Очень холодные сливки взбейте до густой консистенции. В миску выложите маскарпоне или другой сливочный сыр. Добавьте сахарную пудру по вкусу и взбейте миксером. После добавьте сливки и опять взбейте крем.
\n\n
Шаг 6\n
Половину крема выложите на слой печенья.
\n\n
Шаг 7\n
Распределите крем ровным слоем по печенью.
\n\n
Шаг 8\n
Обмакивая печенье в кофе с коньяком, выложите второй слой печенья.
\n\n
Шаг 9\n
Вторую часть крема распределите по печенью.
\n\n
Шаг 10\n
С помощью ситечка посыпьте торт какао-порошком и отправьте в холодильник на несколько часов. Порежьте торт на порции и подавайте к столу.
\n\n
Шаг 11\n
Замечательный торт "Тирамису" подойдет к самым большим праздникам в вашем доме.
    </string>
</resources>